embedding visualization with PCA added

--- a/templates/index.html
+++ b/templates/index.html
@@ -69,6 +69,10 @@
       Ask from PDF
     </button>
   </div>
+  <a href="/embedding_explorer" 
+   class="px-4 py-2 bg-purple-600 text-white rounded-lg hover:bg-purple-500">
+   Embedding Explorer
+</a>
 
   <div class="flex space-x-3">
     <input id="message"
